marginally more mobile-friendly

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Dummy</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body style="overflow-x:hidden">
   <div id="hous4-16-18">
