multiple dots visible at same time

--- a/dotExplainer.html
+++ b/dotExplainer.html
@@ -1,8 +1,8 @@
-<input type='radio' name='dotDataset' value = 'vouchers' checked>
+<input type='checkbox' name='dotDataset' value = 'vouchers' checked>
 Each <div class='legend_dot_svg_ex vouchers'></div> represents
-<span class="dotRepresents"></span>
-household<span class="dotRepresentsIsPlural">s</span> receiving vouchers.<br>
-<input type='radio' name='dotDataset' value='affordable_units'> Each
+<span class="dotRepresents vouchers"></span>
+household<span class="dotRepresentsIsPlural vouchers">s</span> receiving vouchers.<br>
+<input type='checkbox' name='dotDataset' value='affordable_units'> Each
 <div class='legend_dot_svg_ex affordable_units'></div> represents
-<span class="dotRepresents"></span> affordable rental
-unit<span class="dotRepresentsIsPlural">s</span>.
+<span class="dotRepresents affordable_units"></span> affordable rental
+unit<span class="dotRepresentsIsPlural affordable_units">s</span>.
