legend for HOLC, other minor changes

--- a/dotExplainer.html
+++ b/dotExplainer.html
@@ -1,4 +1,4 @@
-<input type='checkbox' name='dotDataset' value = 'vouchers' checked>
+<input type='checkbox' name='dotDataset' value = 'vouchers'>
 Each <div class='legend_dot_svg_ex vouchers'></div> represents
 <span class="dotRepresents vouchers"></span>
 household<span class="dotRepresentsIsPlural vouchers">s</span> receiving vouchers.<br>
