--- a/dotExplainer.html
+++ b/dotExplainer.html
@@ -1,8 +1,8 @@
-<input type='checkbox' name='dotDataset' value = 'vouchers'>
+<div class="line"><input type='checkbox' name='dotDataset' value = 'vouchers'>
 Each <div class='legend_dot_svg_ex vouchers'></div> represents
 <span class="dotRepresents vouchers"></span>
-household<span class="dotRepresentsIsPlural vouchers">s</span> receiving vouchers.<br>
+household<span class="dotRepresentsIsPlural vouchers">s</span> receiving vouchers.</div><div class="line">
 <input type='checkbox' name='dotDataset' value='affordable_units'> Each
 <div class='legend_dot_svg_ex affordable_units'></div> represents
 <span class="dotRepresents affordable_units"></span> affordable rental
-unit<span class="dotRepresentsIsPlural affordable_units">s</span>.
+unit<span class="dotRepresentsIsPlural affordable_units">s</span>.</div>
