--- a/dotExplainer.html
+++ b/dotExplainer.html
@@ -1,7 +1,12 @@
 <div class="line"><input type='checkbox' name='dotDataset' value = 'vouchers'>
 Each <div class='legend_dot_svg_ex vouchers'></div> represents
-<span class="dotRepresents vouchers"></span>
-household<span class="dotRepresentsIsPlural vouchers">s</span> receiving vouchers.</div><div class="line">
+<span class="dotRepresents vouchers"></span> household<span class="dotRepresentsIsPlural vouchers">s</span>
+<select class="voucherHouseholdType">
+  <option value="vouchers">receiving vouchers.</option>
+  <option value="with_kids">receiving vouchers with children.</option>
+  <option value="with_kids_nonwhite">of color receiving vouchers with children.</option>
+</select>
+</div><div class="line">
 <input type='checkbox' name='dotDataset' value='affordable_units'> Each
 <div class='legend_dot_svg_ex affordable_units'></div> represents
 <span class="dotRepresents affordable_units"></span> affordable rental
