fixes from Alicia

--- a/dotExplainer.html
+++ b/dotExplainer.html
@@ -3,8 +3,8 @@ Each <div class='legend_dot_svg_ex vouchers'></div> represents
 <span class="dotRepresents vouchers"></span> household<span class="dotRepresentsIsPlural vouchers">s</span>
 <select class="voucherHouseholdType">
   <option value="vouchers">receiving vouchers.</option>
-  <option value="with_kids">receiving vouchers with children.</option>
-  <option value="with_kids_nonwhite">of color receiving vouchers with children.</option>
+  <option value="with_kids">with children, receiving vouchers.</option>
+  <option value="with_kids_nonwhite">of color, with children, receiving vouchers.</option>
 </select>
 </div><div class="line">
 <input type='checkbox' name='dotDataset' value='affordable_units'> Each
