final tweaks before sudden posting

--- a/dotExplainer.html
+++ b/dotExplainer.html
@@ -9,5 +9,5 @@ Each <div class='legend_dot_svg_ex vouchers'></div> represents
 </div><div class="line">
 <input type='checkbox' name='dotDataset' value='affordable_units'> Each
 <div class='legend_dot_svg_ex affordable_units'></div> represents
-<span class="dotRepresents affordable_units"></span> affordable rental
+<span class="dotRepresents affordable_units"></span> voucher-affordable rental
 unit<span class="dotRepresentsIsPlural affordable_units">s</span>.</div>
