hacky safari fix + other tweaks

--- a/loadtest.html
+++ b/loadtest.html
@@ -9,6 +9,6 @@
   <div id="hous4-16-18">
     
   </div>
-  <script src="app.js" id="script_hous4-16-18"></script>
+  <script src="loader.js" id="loader_hous4-16-18"></script>
 </body>
 </html>
