--- a/node/src/dotExplainer.html
+++ b/node/src/dotExplainer.html
@@ -2,12 +2,12 @@
 Each <div class='legend_dot_svg_ex vouchers'></div> represents
 <span class="dotRepresents vouchers"></span> household<span class="dotRepresentsIsPlural vouchers">s</span>
 <select class="voucherHouseholdType">
-  <option value="vouchers">receiving vouchers.</option>
-  <option value="with_kids">with children, receiving vouchers.</option>
-  <option value="with_kids_nonwhite">of color, with children, receiving vouchers.</option>
+  <option value="hcv_hh">receiving vouchers.</option>
+  <option value="hcv_kids">with children, receiving vouchers.</option>
+  <option value="nwkids_hcv">of color, with children, receiving vouchers.</option>
 </select>
 </div><div class="line">
-<input type='checkbox' name='dotDataset' value='affordable_units'> Each
+<input type='checkbox' name='dotDataset' value='aff_units'> Each
 <div class='legend_dot_svg_ex affordable_units'></div> represents
 <span class="dotRepresents affordable_units"></span> voucher-affordable rental
 unit<span class="dotRepresentsIsPlural affordable_units">s</span>.</div>
