working the new data in, different format, lots of stuff broken

--- a/node/src/dotExplainer.html
+++ b/node/src/dotExplainer.html
@@ -2,9 +2,9 @@
 Each <div class='legend_dot_svg_ex vouchers'></div> represents
 <span class="dotRepresents vouchers"></span> household<span class="dotRepresentsIsPlural vouchers">s</span>
 <select class="voucherHouseholdType">
-  <option value="hcv_hh">receiving vouchers.</option>
-  <option value="hcv_kids">with children, receiving vouchers.</option>
-  <option value="nwkids_hcv">of color, with children, receiving vouchers.</option>
+  <option value="hcv_total">receiving vouchers.</option>
+  <option value="hcv_children">with children, receiving vouchers.</option>
+  <option value="hcv_children_poc">of color, with children, receiving vouchers.</option>
 </select>
 </div><div class="line">
 <input type='checkbox' name='dotDataset' value='aff_units'> Each
