more work on cbsa background

--- a/node/src/dom_new.html
+++ b/node/src/dom_new.html
@@ -1,5 +1,8 @@
 <div class='pickers'>
-
+  <select name="tract-dataset">
+    <option value="poverty_pov_pct">Poverty</option>
+    <option value="ethnicity_nonwhite_percentage">Non-white percentage</option>
+  </select>
 </div>
 <div class="map-viewport-outer">
   <div class='map-viewport'>
