--- a/node/src/dom_new.html
+++ b/node/src/dom_new.html
@@ -3,6 +3,11 @@
     <option value="poverty_pov_pct">Poverty</option>
     <option value="ethnicity_nonwhite_percentage">Non-white percentage</option>
   </select>
+  <select multiple name="dots-dataset">
+    <option value="hcv_total" selected>hcv total</option>
+    <option value="hcv_children" >hcv children</option>
+    <option value="hcv_children_poc">hcv children poc</option>
+  </select>
 </div>
 <div class="map-viewport-outer">
   <div class='map-viewport'>
