work on mobile zoom

--- a/node/src/dom_new.html
+++ b/node/src/dom_new.html
@@ -17,7 +17,7 @@
     <select name="dots-dataset">
     </select>
   </div>
-  <div class='picker-wrapper'>
+  <div class='picker-wrapper picker-race-ethnicity'>
     <label>Race/ethnicity layers:</label>
     <ul name="additional-dot-layers-checkboxes">
     </ul>
