more work on mobile zoom

--- a/node/src/dom_new.html
+++ b/node/src/dom_new.html
@@ -18,7 +18,7 @@
     </select>
   </div>
   <div class='picker-wrapper picker-race-ethnicity'>
-    <label>Race/ethnicity layers:</label>
+    <label class='race-ethnicity-click'>Race/ethnicity layers:</label>
     <ul name="additional-dot-layers-checkboxes">
     </ul>
   </div>
