--- a/node/src/dom.html
+++ b/node/src/dom.html
@@ -8,7 +8,7 @@
     <label>Color tracts by:</label>
     <select name="tract-dataset">
       <option value="poverty_pov_pct">Poverty Rate</option>
-      <option value="ethnicity_nonwhite_percentage">Non-white percentage</option>
+      <option value="ethnicity_nonwhite_percentage">Percentage People of Color</option>
       <option value="none">None</option>
     </select>
   </div>
