--- a/node/src/dom.html
+++ b/node/src/dom.html
@@ -18,8 +18,20 @@
     </ul>
   </div>
   <div class='picker-wrapper'>
-    <label>Voucher Layer:</label>
-    <select name="dots-dataset">
+    <label>Housing Program:</label>
+    <select name="dots-program">
+      <option value="hcv">Housing vouchers</option>
+      <option value="pbra">Project-based rental assistance</option>
+      <option value="ph">Public housing</option>
+    </select>
+  </div>
+  <div class="picker-wrapper">
+    <label>Household Type:</label>
+    <select name='dots-household'>
+      <option value='total'>All families using program</option>
+      <option value="children">Families with children</option>
+      <option value="children_poc">Families of color with children</option>
+      <option value="disability">Families with a member with a disability</option>
     </select>
   </div>
   <div class='picker-wrapper'>
