more legend improvements/additions

--- a/node/src/legend_template.html
+++ b/node/src/legend_template.html
@@ -3,7 +3,14 @@
     <div class='voucher-circle'></div>
     <label><span name='voucher-dot-represents'></span>&nbsp;<span name='voucher-layer-name'></span></label>
   </div>
-  <div class='legend-bins'>
-    
+  <div class='safmr-indicator'>
+    <div class='safmr-circle'></div>
+    <label><span name='safmr-dot-represents'></span>&nbsp;voucher-affordable rental units</label>
+  </div>
+  <div class='legend-bins-wrapper'>
+    <div class='legend-bins'>
+      
+    </div>
+    <label></label>
   </div>
 </div>
