more ui improvements

--- a/node/src/legend_template.html
+++ b/node/src/legend_template.html
@@ -12,5 +12,14 @@
       
     </div>
     <label></label>
+    <div class="hud-poc-note">
+      <div class='hud-poc-note-inner'>HUD-Defined “Minority-Concentrated”<span class='hud-note-hover'><sup>[note]</sup>
+      <span class='hud-not-hover-text'>
+        Neighborhoods are color-coded as “HUD-defined ‘minority-concentrated’ neighborhood” when the share of people that identify as a person of color is at least 20 percentage points higher than the share for the metro area as a whole. This is based on HUD’s official measure of “areas of minority concentration” used in the Rental Assistance Demonstration program.
+      </span></span> Neighborhood
+      </div>
+      <div class="hud-note-left-bracket"></div>
+      <div class="hud-note-right-bracket"></div>
+    </div>
   </div>
 </div>
