restore "none" as option for housing program layer

--- a/node/src/dom.html
+++ b/node/src/dom.html
@@ -27,6 +27,7 @@
         <option value="hcv">Housing vouchers</option>
         <option value="pbra">Project-based rental assistance</option>
         <option value="ph">Public housing</option>
+        <option value="none">None</option>
       </select>
     </div>
     <div class="picker-wrapper">
