various visual tweaks

--- a/node/src/legend_template.html
+++ b/node/src/legend_template.html
@@ -1,6 +1,12 @@
 <div class='legend-inner'>
   <div class='voucher-indicator'>
     <div class='voucher-circle'></div>
+    <div class='voucher-square'></div>
+    <div class='voucher-triangle'>
+      <svg viewbox="-1 -1 12 12">
+        <path d="M0,10L5,0L10,10L0,10z" stroke-width="2.6" stroke="rgba(255, 255, 255, 0.8)" fill="rgba(111, 66, 245, 0.8)"></path>
+      </svg>
+    </div>
     <label><span name='voucher-dot-represents'></span>&nbsp;<span name='voucher-layer-name'></span></label>
   </div>
   <div class='safmr-indicator'>
