add instructions for race layer; tweak colors some

--- a/node/src/dom.html
+++ b/node/src/dom.html
@@ -20,6 +20,9 @@
       <div class='select-all-none'><a href='#select-all-race'>Select All</a> | <a href='#select-none-race'>Select None</a></div>
       <ul name="additional-dot-layers-checkboxes">
       </ul>
+      <div class='racial-density-instructions'>
+        <span>Check these boxes to turn on dots representing population density for that race, or click "Select All."<br><a href="#race-instructions-ok">OK</a></span>
+      </div>
     </div>
     <div class='picker-wrapper'>
       <label>Housing Program:</label>
