use water as clip mask

--- a/node/src/dom.html
+++ b/node/src/dom.html
@@ -1,7 +1,7 @@
 <div class='pickers-and-map-viewport'>
   <div class='picker-open-self'>Configuration</div>
   <div class='pickers'>
-    <div class='picker-close-self'>&#10006;</div>
+    <div class='picker-close-self'><span>&#10006;</span></div>
     <div class='picker-wrapper'>
       <label>Core-based statistical area:</label>
       <select name="cbsa">
