functional draft chartbook

--- a/webroot/scrolling.html
+++ b/webroot/scrolling.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
 </head>
 <body>
+  <div class='intro-text'>
   <h1>Introduction</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut eleifend sapien, at pretium sapien. Morbi elementum elementum odio vel ullamcorper. Proin ac venenatis magna. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Duis vel sapien magna. Aliquam et consectetur diam. Suspendisse potenti. Ut rhoncus justo magna, ut dapibus odio facilisis sed. Pellentesque sollicitudin volutpat arcu. Donec ut metus non libero rutrum lobortis. Nulla porta urna purus, vel facilisis nulla tincidunt vitae. In cursus ante magna, sit amet sollicitudin metus venenatis a. In gravida aliquam arcu, sit amet porttitor risus euismod sed.</p><p>
 
@@ -17,6 +18,7 @@
     Duis ac dignissim lorem, ut tincidunt nisi. Suspendisse iaculis quam at lectus rutrum, a mattis sem vehicula. Morbi auctor lectus eros, in imperdiet metus lobortis quis. In vitae mauris aliquet, hendrerit dolor tristique, consequat ipsum. Suspendisse sit amet viverra nunc. Fusce dapibus vel est quis efficitur. In vitae ipsum sed quam commodo dictum. Mauris pretium augue id justo posuere, vel pulvinar massa condimentum. Duis gravida arcu quis libero interdum, vel cursus justo tempor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed suscipit ante vel neque euismod, ut commodo purus convallis. Nullam nec massa ullamcorper, scelerisque libero accumsan, lobortis tortor. Donec dui quam, consequat vitae placerat sit amet, tristique in augue. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nibh dolor, porta ut mauris at, egestas mollis mi. Mauris congue scelerisque ullamcorper.</p><p>
     
     Duis sit amet orci tortor. Aenean nisi velit, finibus et elementum eget, iaculis eu ipsum. Mauris maximus augue quam, vitae facilisis dolor efficitur id. Fusce maximus placerat imperdiet. Nam posuere sapien ut lacinia mollis. Mauris auctor tincidunt dolor, sed sodales tellus tincidunt nec. Nullam suscipit elit laoreet facilisis finibus.</p>
+    </div>
     <div style='margin-left:200px'>
     <div class='slide-deck'>
       <div class='slide' name='milwaukee-1'>
@@ -136,7 +138,10 @@
     <p>
     <div class='slide-custom-backgrounds'>
       <div name='families_poc_milwaukee_chart'>
-        <img src="./demo_assets/chart1.png" style="width:100%;">
+        <img src="./demo_assets/chart1.png">
+      </div>
+      <div name='poverty_voucher'>
+        <img src="./demo_assets/chart2.png">
       </div>
     </div>
     <div id="hous4-16-18">
