--- a/node/src/legend_template.html
+++ b/node/src/legend_template.html
@@ -1,31 +1,35 @@
-<div class='legend-inner'>
-  <div class='voucher-indicator'>
-    <div class='voucher-circle'></div>
-    <div class='voucher-square'></div>
-    <div class='voucher-triangle'>
-      <svg viewbox="-1 -1 12 12">
-        <path d="M0,10L5,0L10,10L0,10z" stroke-width="2.6" stroke="rgba(255, 255, 255, 0.8)" fill="rgba(111, 66, 245, 0.8)"></path>
-      </svg>
-    </div>
-    <label><span name='voucher-dot-represents'></span>&nbsp;<span name='voucher-layer-name'></span></label>
-  </div>
-  <div class='safmr-indicator'>
-    <div class='safmr-circle'></div>
-    <label><span name='safmr-dot-represents'></span>&nbsp;voucher-affordable rental units</label>
-  </div>
-  <div class='legend-bins-wrapper'>
-    <div class='legend-bins'>
-      
-    </div>
-    <label></label>
-    <div class="hud-poc-note">
-      <div class='hud-poc-note-inner'>HUD-Defined “Minority-Concentrated”<span class='hud-note-hover'><sup>[note]</sup>
-      <span class='hud-not-hover-text'>
-        Neighborhoods are color-coded as “HUD-defined ‘minority-concentrated’ neighborhood” when the share of people that identify as a person of color is at least 20 percentage points higher than the share for the metro area as a whole. This is based on HUD’s official measure of “areas of minority concentration” used in the Rental Assistance Demonstration program.
-      </span></span> Neighborhood
+<div class='legend-position'>
+  <div class='legend-inner'>
+    <div class='households'>
+      <div class='voucher-indicator'>
+        <div class='voucher-circle'></div>
+        <div class='voucher-square'></div>
+        <div class='voucher-triangle'>
+          <svg viewbox="-1 -1 12 12">
+            <path d="M0,10L5,0L10,10L0,10z" stroke-width="2.6" stroke="rgba(255, 255, 255, 0.8)" fill="rgba(111, 66, 245, 0.8)"></path>
+          </svg>
+        </div>
+        <label><span name='voucher-dot-represents'></span>&nbsp;<span name='voucher-layer-name'></span></label>
       </div>
-      <div class="hud-note-left-bracket"></div>
-      <div class="hud-note-right-bracket"></div>
+      <div class='safmr-indicator'>
+        <div class='safmr-circle'></div>
+        <label><span name='safmr-dot-represents'></span>&nbsp;voucher-affordable rental units</label>
+      </div>
+    </div>
+    <div class='legend-bins-wrapper'>
+      <div class='legend-bins'>
+        
+      </div>
+      <label></label>
+      <div class="hud-poc-note">
+        <div class='hud-poc-note-inner'>HUD-Defined “Minority-Concentrated”<span class='hud-note-hover'><sup>[note]</sup>
+        <span class='hud-not-hover-text'>
+          Neighborhoods are color-coded as “HUD-defined ‘minority-concentrated’ neighborhood” when the share of people that identify as a person of color is at least 20 percentage points higher than the share for the metro area as a whole. This is based on HUD’s official measure of “areas of minority concentration” used in the Rental Assistance Demonstration program.
+        </span></span> Neighborhood
+        </div>
+        <div class="hud-note-left-bracket"></div>
+        <div class="hud-note-right-bracket"></div>
+      </div>
     </div>
   </div>
 </div>
