--- a/node/src/dom.html
+++ b/node/src/dom.html
@@ -49,6 +49,10 @@
       </div>
     </div>
   </div>
+  <div class='zoom-buttons'>
+    <button name='zoom-in'>Zoom in</button>
+    <button name='zoom-out'>Zoom out</button>
+  </div>
   <div class="map-viewport-outer">
     <div class='map-viewport'>
 
