change from erik 5/21/24

--- a/node/src/dom.html
+++ b/node/src/dom.html
@@ -5,7 +5,7 @@
       <div class='pickers'>
         <div class='picker-close-self'><span>&#10006;</span></div>
         <div class='picker-wrapper'>
-          <label>Core-based statistical area:</label>
+          <label>Metropolitan area:</label>
           <select name="cbsa">
           </select>
         </div>
@@ -14,11 +14,11 @@
           <select name="tract-dataset">
             <option value="poverty_pov_pct">Poverty Rate</option>
             <!--<option value="ethnicity_nonwhite_percentage">Percentage People of Color</option>-->
-            <option value="none">Racial density</option>
+            <option value="none">Race/ethnicity population density</option>
           </select>
         </div>
         <div class='picker-wrapper picker-race-ethnicity'>
-          <label>Race/ethnicity layers:</label>
+          <label>Race/ethnicity groups:</label>
           <div class='select-all-none'><a href='#select-all-race'>Select All</a> | <a href='#select-none-race'>Select None</a></div>
           <ul name="additional-dot-layers-checkboxes">
           </ul>
@@ -27,7 +27,7 @@
           </div>
         </div>
         <div class='picker-wrapper'>
-          <label>Housing Program:</label>
+          <label>Rental assistance program:</label>
           <select name="dots-program">
             <option value="hcv">Housing vouchers</option>
             <option value="pbra">Project-based rental assistance</option>
@@ -38,10 +38,10 @@
         <div class="picker-wrapper">
           <label>Household Type:</label>
           <select name='dots-household'>
-            <option value='total'>All families using program</option>
+            <option value='total'>All households using program</option>
             <option value="children">Families with children</option>
             <option value="children_poc">Families of color with children</option>
-            <option value="disability">Families with a member with a disability</option>
+            <option value="disability">Households with a member with a disability</option>
           </select>
         </div>
         <div class='picker-wrapper'>
