changes from erik email 5/29/24

--- a/node/src/dom.html
+++ b/node/src/dom.html
@@ -23,7 +23,7 @@
           <ul name="additional-dot-layers-checkboxes">
           </ul>
           <div class='racial-density-instructions'>
-            <span>Check these boxes to turn on dots representing population density for that race, or click "Select All."<br><a href="#race-instructions-ok">OK</a></span>
+            <span>Check these boxes to add dots representing population density for that race/ethnicity group, or click "Select All."<br><a href="#race-instructions-ok">OK</a></span>
           </div>
         </div>
         <div class='picker-wrapper'>
