--- a/webroot/index.html
+++ b/webroot/index.html
@@ -9,9 +9,20 @@
 <body>
   <div style="max-width:1100px">
     <div id="hous4-16-18">
-      <p>Intro instructions of some kind. Possibly a screenshot.</p>
-      <p>Pick a metro area to see the maps:</p>
-      <select name='cbsa' class="opener"></select>
+      <p><a href="https://www.cbpp.org/research/policy-basics-federal-rental-assistance">Federal rental assistance</a> enables families to afford decent, stable housing, avoid homelessness and other forms of housing insecurity, and make ends meet. Three major programs &ndash; <a href="https://www.cbpp.org/research/policy-basics-the-housing-choice-voucher-program">Housing Choice Vouchers</a>, <a href="https://www.cbpp.org/research/policy-basics-section-8-project-based-rental-assistance">Section 8 Project-Based Rental Assistance</a>, and <a href="https://www.cbpp.org/research/policy-basics-introduction-to-public-housing">Public Housing</a> &ndash; assist about 84 percent of the households receiving rental assistance. This map allows users to examine where households receiving rental assistance from these three programs live in the 100 most populous metropolitan areas. Neighborhoods are color-coded according to their poverty rate and race/ethnicity population density. For more, read our full report, Where Households Using Federal Rental Assistance Live.</p>
+
+<p>Shape icons represent groups of households or housing units. They are randomly placed within each neighborhood and do not represent the precise locations of individual assisted households, buildings, or voucher-affordable rental units.</p>
+<p><label for='main-cbsa-picker'>Metro area:</label> <select name='cbsa' id='main-cbsa-picker' class="opener"></select></p> 
+<p><strong>Instructions</strong>:</p>
+
+<ul>
+	<li>Select a metro area, type of map, rental assistance program, and type of assisted household using the drop-down menus.</li>
+	<li>For maps showing race/ethnicity population density: add or remove race/ethnicity groups using the checkboxes in the box in the top-left corner.</li>
+	<li>For maps showing voucher-assisted households: add or remove voucher-affordable units using the checkbox in the box in the top-left corner. We define voucher-affordable units as those with gross rents below the local two-bedroom Small Area Fair Market Rent.</li>
+</ul>
+
+
+     
     </div>
   </div>
   <div style="height:500px"></div>
